# cpp__template_project

./: .gitignore  CMakeLists.txt  README.md
app/: CMakeLists.txt  main.cpp
headers/: CMakeLists.txt  README.txt
saved_solutions/: README.txt
sources/: CMakeLists.txt  README.txt
tests/: CMakeLists.txt  test_main.cpp
